--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 <body>
     <div id="container">
         <label id="textoUm">amandaaaaaaaaaa</label>
+        <input type="date">
     </div>
 </body>
 </html>
