--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
 </head>
 <body>
     <div id="container">
-        <label id="textoUm">amandaaaaaaaaaa</label>
-        <input type="date">
+        <label id="textoUm">amandaaaaaaaaaa</label><br><br>
+        <input type="date"><br><br>
+        <a href="page2.html"><button >Teste Link BUTÃO</button></a><br>
     </div>
 </body>
 </html>
