--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <div id="container">
         <label id="textoUm">amandaaaaaaaaaa</label><br><br>
         <input type="date"><br><br>
-        <a href="page2.html"><button >Teste Link BUTÃO</button></a><br>
+        <a href="index2.html"><button >Teste Link BUTÃO</button></a><br>
     </div>
 </body>
 </html>
