--- a/index2.html
+++ b/index2.html
@@ -1,12 +1,48 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Carrossel de Hamburgers</title>
+  <!-- Inclua a biblioteca Bootstrap -->
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
+  <style>
+    /* Estilo opcional para ajustar a altura do carrossel */
+    .carousel {
+      max-height: 400px; /* Ajuste conforme necessário */
+    }
+  </style>
 </head>
-<body bgcolor="green">
-    
+<body bgcolor="red">
+
+  <div class="container mt-5">
+    <h1 class="text-center">Carrossel de Hamburgers</h1>
+    <div id="hamburgerCarousel" class="carousel slide" data-ride="carousel">
+      <div class="carousel-inner">
+        <!-- Imagem 1 -->
+        <div class="carousel-item active">
+          <img src="https://example.com/hamburger1.jpg" class="d-block w-100" alt="Hamburger 1">
+        </div>
+        <!-- Imagem 2 -->
+        <div class="carousel-item">
+          <img src="https://example.com/hamburger2.jpg" class="d-block w-100" alt="Hamburger 2">
+        </div>
+        <!-- Adicione mais imagens conforme necessário -->
+      </div>
+      <!-- Controles do Carrossel -->
+      <a class="carousel-control-prev" href="#hamburgerCarousel" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Anterior</span>
+      </a>
+      <a class="carousel-control-next" href="#hamburgerCarousel" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Próximo</span>
+      </a>
+    </div>
+  </div>
+
+  <!-- Inclua a biblioteca jQuery e o Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
