--- a/index.html
+++ b/index.html
@@ -3,44 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-
-    <!-- Adicione os links para os estilos do Slick Carousel -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
-
-    <!-- Adicione o link para o jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-    <!-- Adicione o link para o script do Slick Carousel -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-
     <link rel="stylesheet" href="style.css">
+    <title>Nossa História</title>
 </head>
 <body>
-    <div id="container">
-        <div id="cima">
-            <div id="carrossel">
-                <!-- Slides do Carrossel -->
-                <div><img src="IMG_6213.jpg" alt="Slide 1" width="80px" height="110px"></div>
-                <div><img src="5DF4F24A-F55E-4835-9404-5484CEF6018D.jpg" alt="Slide 2" width="80px" height="110px" ></div>
-                <div><img src="505ce31d-d951-4884-917e-f464a6fffd67.jpg" alt="Slide 3" width="80px" height="110px"></div>
+    <div id="containerUm">
+        <div id="cimaPum">
+            <div id="doTitulo">
+                <label id="titulo">Nossa História</label>
             </div>
         </div>
-        <div id="meio"></div>
-        <div id="baixo">
-            <a href="index2.html"><button >Teste Link BUTÃO</button></a><br>
+        <div id="meioPum">
+            <div id="paraTexto">
+                <label>oii momo, fiz isso para ser uma forma diferente de ver a nossa história, esses 525999,99 minutos, 8766,66 horas, 365 dias, 52 semanas, 1 ano que estamos namorando. Dia 26/01/2023 foi que tudo isso começou mesmo, sem duvidas que nunca irei esquecer esse dia as vezes me pego relembrando, muitas vezes pensativo, achando que poderia ter sido diferente, fazendo de fato um pedido, com alianças e tudo mais que você merece, achando que você iria gostar mais ou sla. Mas logo lembro que esse ano foi o melhor ano da minha vida com toda a certeza, e não mudaria nada nele, mesmo nossos momentos dificieis, pois eles foram importante também para nos fortalecer cada vez mais. E no final só quero te agradecer, por tudo, pois em todo esse tempo você estava do meu lado, sempre me apoiando, dando proncas quando nescessario, mas principalmente me ensinando de todas as formas, sou uma pessoa muito melhor graças a você Amanda Souza Machado. Me fez descobri o que é o amor de verdade, você é o amor da minha vida espero passar o resto da minha vida ao seu lado. A.A pra sempre</label>
+            </div>
+        </div>
+        <div id="baixoPum">
+            <a href="index3.html"><button id="but">Continuar</button></a><br>
         </div>
     </div>
-
-    <!-- Inicialize o Slick Carousel com carrossel automático -->
-    <script>
-        $(document).ready(function(){
-            $('#carrossel').slick({
-                autoplay: true,
-                autoplaySpeed: 2000, // Tempo em milissegundos entre cada slide
-            });
-        });
-    </script>
 </body>
 </html>
