--- a/index2.html
+++ b/index2.html
@@ -1,48 +1,27 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Carrossel de Hamburgers</title>
-  <!-- Inclua a biblioteca Bootstrap -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
-  <style>
-    /* Estilo opcional para ajustar a altura do carrossel */
-    .carousel {
-      max-height: 400px; /* Ajuste conforme necessário */
-    }
-  </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
+    <title>Document</title>
 </head>
-<body bgcolor="red">
-
-  <div class="container mt-5">
-    <h1 class="text-center">Carrossel de Hamburgers</h1>
-    <div id="hamburgerCarousel" class="carousel slide" data-ride="carousel">
-      <div class="carousel-inner">
-        <!-- Imagem 1 -->
-        <div class="carousel-item active">
-          <img src="https://example.com/hamburger1.jpg" class="d-block w-100" alt="Hamburger 1">
+<body>
+    <div id="containerUm">
+        <div id="cimaPum">
+            <div id="doTitulo">
+                <h1>Nossa História</h1>
+            </div>
+            <div id="paraTexto">
+                <label>oii momo, fiz isso para ser uma forma diferente de ver a nossa história, esses 525999,99 minutos, 8766,66 horas, 365 dias, 52 semanas, 1 ano. Dia 26/01/2023 foi que tudo isso começou mesmo, sem duvidas que nunca irei esquecer esse dia as vezes me pego relembrando, muitas vezes pensativo, achando que poderia ter sido diferente, fazendo de fato um pedido, com alianças e tudo mais que você merece, achando que você iria gostar mais ou sla. Mas logo lembro que esse ano foi o melhor ano da minha vida com toda a certeza, e não mudaria nada nele, mesmo nossos momentos dificieis, pois eles foram importante também para nos fortalecer cada vez mais. E no final só quero te agradecer, por tudo, pois em todo esse tempo você estava do meu lado, sempre me apoiando, dando proncas quando nescessario, mas principalmente me ensinando de todas as formas, sou uma pessoa muito melhor graças a você Amanda Souza Machado. Me fez descobri o que é o amor de verdade, você é o amor da minha vida espero passar o resto da minha vida ao seu lado. A.A pra sempre</label>
+            </div>
         </div>
-        <!-- Imagem 2 -->
-        <div class="carousel-item">
-          <img src="https://example.com/hamburger2.jpg" class="d-block w-100" alt="Hamburger 2">
+        <div id="meioPum">
+    
         </div>
-        <!-- Adicione mais imagens conforme necessário -->
-      </div>
-      <!-- Controles do Carrossel -->
-      <a class="carousel-control-prev" href="#hamburgerCarousel" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Anterior</span>
-      </a>
-      <a class="carousel-control-next" href="#hamburgerCarousel" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Próximo</span>
-      </a>
+        <div id="baixoPum">
+    
+        </div>
     </div>
-  </div>
-
-  <!-- Inclua a biblioteca jQuery e o Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
 </body>
 </html>
