--- a/index3.html
+++ b/index3.html
@@ -22,9 +22,9 @@
         <div id="cima">
             <div id="carrossel">
                 <!-- Slides do Carrossel -->
-                <div ><img src="IMG_6213.jpg" alt="Slide 1" width="400px" height="200px"></div>
-                <div ><img src="5DF4F24A-F55E-4835-9404-5484CEF6018D.jpg" alt="Slide 2" width="400px" height="200px" ></div>
-                <div ><img src="505ce31d-d951-4884-917e-f464a6fffd67.jpg" alt="Slide 3" width="400px" height="200px"></div>
+                <div ><img src="IMG_6213.jpg" alt="Slide 1" width="400px" height="200px" class="imaa"></div>
+                <div ><img src="5DF4F24A-F55E-4835-9404-5484CEF6018D.jpg" alt="Slide 2" width="400px" height="200px" class="imaa"></div>
+                <div ><img src="505ce31d-d951-4884-917e-f464a6fffd67.jpg" alt="Slide 3" width="400px" height="200px" class="imaa"></div>
             </div>
         </div>
         <div id="meioTres">
@@ -32,14 +32,14 @@
                 <label id="vamosLa">Vamos lá</label>
             </div>
             <div id="textoVamosLa">
-                <label>Agora deu de enrolação amor, vamos lá espero que goste momo, puq foram algumas noite dormindo tarde para conseguir fazer ksksk. Então aperte o sinto e comece a viagem</label>
+                <label id="aaaa">Agora deu de enrolação amor, vamos lá espero que goste momo, puq foram algumas noite dormindo tarde para conseguir fazer ksksk. Então aperte o sinto e comece a viagem</label>
             </div>
         </div>
         <div id="baixoTres">
             <div id="escritoEscolha">
-                <label>Escolha a forma que você quer ir hoje</label>
+                <label id="escolhaForma">Escolha a forma que você quer ir hoje</label>
             </div>
-            <div class="escolha">
+            <div id="dividir">
                 <div class="divButEscolha">
                     <a href="index4.html"><button class="butEscolha">Específica</button></a><br>
                 </div>
