--- a/index3.html
+++ b/index3.html
@@ -32,7 +32,7 @@
                 <label id="vamosLa">Vamos lá</label>
             </div>
             <div id="textoVamosLa">
-                <label id="aaaa">Agora deu de enrolação amor, vamos lá espero que goste momo, puq foram algumas noite dormindo tarde para conseguir fazer ksksk. Então aperte o sinto e comece a viagem</label>
+                <label id="aaaa">Agora deu de enrolação, vamos lá espero que goste momo, puq foram algumas noite dormindo tarde para conseguir fazer ksksk. Então aperte o sinto e comece a viagem</label>
             </div>
         </div>
         <div id="baixoTres">
