--- a/index3.html
+++ b/index3.html
@@ -27,24 +27,18 @@
                 <div ><img src="505ce31d-d951-4884-917e-f464a6fffd67.jpg" alt="Slide 3" width="400px" height="200px" class="imaa"></div>
             </div>
         </div>
-        <div id="meioTres">
-            <div id="escrever">
-                <label id="vamosLa">Vamos lá</label>
-            </div>
-            <div id="textoVamosLa">
-                <label id="aaaa">Agora deu de enrolação, vamos lá espero que goste momo, puq foram algumas noite dormindo tarde para conseguir fazer ksksk. Então aperte o sinto e comece a viagem</label>
-            </div>
-        </div>
-        <div id="baixoTres">
-            <div id="escritoEscolha">
-                <label id="escolhaForma">Escolha a forma que você quer ir hoje</label>
-            </div>
-            <div id="dividir">
-                <div class="divButEscolha">
-                    <a href="index4.html"><button class="butEscolha">Específica</button></a><br>
+        <div id="meioIndex3">
+            <div id="voltaIndex3">
+                <div id="escritoEscolha">
+                    <label id="escolhaForma">Escolha a forma que você quer ir hoje</label>
                 </div>
-                <div class="divButEscolha">
-                    <a href="index1.html"><button class="butEscolha">Mês</button></a><br>
+                <div id="dividir">
+                    <div id="divButEscolha">
+                        <a href="index4.html"><button class="butEscolha">Específica</button></a><br>
+                    </div>
+                    <div id="divButEscolha2">
+                        <a href="index1.html"><button class="butEscolha">Mês</button></a><br>
+                    </div>
                 </div>
             </div>
         </div>
