--- a/index1.html
+++ b/index1.html
@@ -4,70 +4,66 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-
-    <!-- Adicione os links para os estilos do Slick Carousel -->
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.css"/>
-    <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick-theme.css"/>
-
-    <!-- Adicione o link para o jQuery -->
-    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
-
-    <!-- Adicione o link para o script do Slick Carousel -->
-    <script type="text/javascript" src="https://cdn.jsdelivr.net/jquery.slick/1.6.0/slick.min.js"></script>
-
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="styleUm.css">
 </head>
 <body>
     <div id="container">
-        <div id="meio">
-            <div class="linhas">
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
-                </div>
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
+        <div id="voltaTudo">
+            <div id="cima">
+                <div id="voltaTitulo">
+                    <label>Escolha um mês</label>
                 </div>
             </div>
-            <div class="linhas">
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
+            <div id="meio">
+                <div class="linhas">
+                    <div class="meses">
+                        <a href="janeiro.html"><button class="mes">Janeiro</button></a><br>
+                    </div>
+                    <div class="meses">
+                        <a href="fevereiro.html"><button class="mes">Fevereiro</button></a><br>
+                    </div>
                 </div>
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
+                <div class="linhas">
+                    <div class="meses">
+                        <a href="marco.html"><button class="mes">Março</button></a><br>
+                    </div>
+                    <div class="meses">
+                        <a href="abril.html"><button class="mes">Abril</button></a><br>
+                    </div>
                 </div>
-            </div>
-            <div class="linhas">
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
+                <div class="linhas">
+                    <div class="meses">
+                        <a href="maio.html"><button class="mes">Maio</button></a><br>
+                    </div>
+                    <div class="meses">
+                        <a href="junho.html"><button class="mes">Junho</button></a><br>
+                    </div>
                 </div>
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
+                <div class="linhas">
+                    <div class="meses">
+                        <a href="julho.html"><button class="mes">Julho</button></a><br>
+                    </div>
+                    <div class="meses">
+                        <a href="agosto.html"><button class="mes">Agosto</button></a><br>
+                    </div>
                 </div>
-            </div>
-            <div class="linhas">
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
+                <div class="linhas">
+                    <div class="meses">
+                        <a href="setembro.html"><button class="mes">Setembro</button></a><br>
+                    </div>
+                    <div class="meses">
+                        <a href="outubro.html"><button class="mes">Outubro</button></a><br>
+                    </div>
                 </div>
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
+                <div class="linhas">
+                    <div class="meses">
+                        <a href="novembro.html"><button class="mes">Novembro</button></a><br>
+                    </div>
+                    <div class="meses">
+                        <a href="dezembro.html"><button class="mes">Dezembro</button></a><br>
+                    </div>
                 </div>
-            </div>
-            <div class="linhas">
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
-                </div>
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
-                </div>
-            </div>
-            <div class="linhas">
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
-                </div>
-                <div class="meses">
-                    <a href="index3.html"><button class="mes">Teste Link BUTÃO</button></a><br>
-                </div>
-            </div>
+        </div>
         </div>
     </div>
 
