--- a/fevereiro.html
+++ b/fevereiro.html
@@ -12,18 +12,18 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">Sogrinha</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="janeiroIMG/sogrinha.PNG" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Fico pensando mds que loucura tudo isso que aconteceu estava morrendo de medo dela muito nervoso isso que era só pelo celular kkkk mas deu tudo certo </label>
                         </div>
                     </div>
                 </div>
