--- a/janeiro.html
+++ b/janeiro.html
@@ -10,10 +10,8 @@
         $(document).ready(function() {
             // Lista de URLs das imagens
             var imagens = [
-                'janeiroIMG/baianinha.PNG',
-                'janeiroIMG/contatoGrande.PNG',
-                'janeiroIMG/vida.PNG',
-                'janeiroIMG/memo.PNG'
+                'janeiroIMG/deliciaPronta.jpg',
+                'janeiroIMG/fogosVirada.jpg'
 
                 // Adicione mais URLs conforme necessário
             ];
@@ -45,7 +43,7 @@
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/baianinha.PNG" id="imagem">
+                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
                         
                         <!-- <img src="janeiroIMG/deliciaPronta.jpg" id="imagem"> -->
                     </div>
@@ -240,7 +238,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Quero começar com a nossa história mostrando os diferentes jeitos do</label>
+                            <label id="texto">Tivemos inumeros contatos salvos diferente cada um com sua história, mas o primeiro é sempre o mais especial</label>
                         </div>
                     </div>
                 </div>
@@ -252,18 +250,18 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">Primeira foto</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="janeiroIMG/505ce31d-d951-4884-917e-f464a6fffd67 (1).JPG" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Nossa primeira foto dps de ter dado uma banda em canas eu vc e um casal que não era casal [dois se fznd]</label>
                         </div>
                     </div>
                 </div>
@@ -275,67 +273,22 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
+                        <label id="titulo">26/01/2023</label>
                     </div>
                 </div>
                 <div id="meio">
                     <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
+                        <img src="janeiroIMG/dia2601.PNG" id="imagem">
                     </div>
                 </div>
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Finalmente dia 26 o nosso dia, "fofinho" foda né mo pensei que vc tinha visto e não queria por pensando que bicho doido sai fora feio, fiquei triste e tirei mas só dps vc entendeu.</label>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
-    <div id="container">
-        <div id="scroll">
-            <div id="voltaTudo">
-                <div id="cima">
-                    <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
-                    </div>
-                </div>
-                <div id="meio">
-                    <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
-                    </div>
-                </div>
-                <div id="baixo">
-                    <div id="voltaTextoBaixo">
-                        <div id="divTexto">
-                            <label id="texto">a</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
-    <div id="container">
-        <div id="scroll">
-            <div id="voltaTudo">
-                <div id="cima">
-                    <div id="doTitulo">
-                        <label id="titulo">31/01/2022</label>
-                    </div>
-                </div>
-                <div id="meio">
-                    <div id="tudoIMG">
-                        <img src="janeiroIMG/deliciaPronta.jpg" id="imagem">
-                    </div>
-                </div>
-                <div id="baixo">
-                    <div id="voltaTextoBaixo">
-                        <div id="divTexto">
-                            <label id="texto">a</label>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+  
