--- a/fevereiro.html
+++ b/fevereiro.html
@@ -95,7 +95,31 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">Tentando sempre de todas as formas mostrar </label>
+                            <label id="texto">Tentando sempre de todas as formas mostrar como eu quero vc do meu lado pra sempre</label>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="container">
+        <div id="scroll">
+            <div id="voltaTudo">
+                <div id="cima">
+                    <div id="doTitulo">
+                        <label id="titulo">Conhecendo familia</label>
+                    </div>
+                </div>
+                <div id="meio">
+                    <div id="tudoIMG">
+                        <img src="fevereiro/primeiroPapa.jpg" id="imagem">
+                    </div>
+                </div>
+                <div id="baixo">
+                    <div id="voltaTextoBaixo">
+                        <div id="divTexto">
+                            <label id="texto">Primeira vez indo na sua casa um dia que nunca vou esquecer mesmo cumprimentando a mari tudo qaundo o lucas chegou a encarada kkkkk mas depois pareceu que ja eramos conhecidos a um tempo foi muito legal smepre é me sinto muito confortavel na sua casa todo mundo me trata bem espero que nunca mude esse meu sentimento </label>
                         </div>
                     </div>
                 </div>
@@ -132,7 +156,7 @@
             <div id="voltaTudo">
                 <div id="cima">
                     <div id="doTitulo">
-                        <label id="titulo">a</label>
+                        <label id="titulo">Primeiro stors</label>
                     </div>
                 </div>
                 <div id="meio">
@@ -143,7 +167,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Ainda lembro desses dias começo das aulas sempre chegando cedo para conseguir te buscar na aula toda quinta era nosso dia e foi em uma delas que te dei a correntinha procurei bastante até achar uma que representasse a gente</label>
                         </div>
                     </div>
                 </div>
@@ -167,7 +191,7 @@
                 <div id="baixo">
                     <div id="voltaTextoBaixo">
                         <div id="divTexto">
-                            <label id="texto">a</label>
+                            <label id="texto">Finalmente o dia de conhecer o temido clesio não consegui convresar direito com até hoje nunca paramos muito para conversar mas é isso não tem muito o que fazer espero que ele goste de mim msm assim</label>
                         </div>
                     </div>
                 </div>
